config de openapi para objetos y escenenas terminada, nombres de los metodos especificados
